--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -1,56 +1,31 @@
 general:
-    debug : False # Debug mode, only for development
-    instance_name : "searx" # displayed name
-
+    debug : False
+    instance_name : "searx"
 search:
-    safe_search : 0 # Filter results. 0: None, 1: Moderate, 2: Strict
-    autocomplete : "" # Existing autocomplete backends: "dbpedia", "duckduckgo", "google", "startpage", "wikipedia" - leave blank to turn it off by default
+    safe_search : 0
+    autocomplete : "google"
     language : "en-US"
-    ban_time_on_fail : 5 # ban time in seconds after engine errors
-    max_ban_time_on_fail : 120 # max ban time in seconds after engine errors
-
+    ban_time_on_fail : 5
+    max_ban_time_on_fail : 120
 server:
     port : 8888
-    bind_address : "127.0.0.1" # address to listen on
-    secret_key : "ultrasecretkey" # change this!
-    base_url : False # Set custom base_url. Possible values: False or "https://your.custom.host/location/"
-    image_proxy : False # Proxying image results through searx
-    http_protocol_version : "1.0"  # 1.0 and 1.1 are supported
-
+    bind_address : "127.0.0.1"
+    secret_key : "3x+eYKQv2SCoyTnpHVHh6+hT+flEdGavN6p8GHkN4ubk"
+    base_url : False
+    image_proxy : False
+    http_protocol_version : "1.1"
 ui:
-    static_path : "" # Custom static path - leave it blank if you didn't change
-    templates_path : "" # Custom templates path - leave it blank if you didn't change
-    default_theme : oscar # ui theme
-    default_locale : "" # Default interface locale - leave blank to detect from browser information or use codes from the 'locales' config section
+    static_path : ""
+    templates_path : ""
+    default_theme : oscar
+    default_locale : ""
     theme_args :
-        oscar_style : logicodev # default style of oscar
-
-# searx supports result proxification using an external service: https://github.com/asciimoo/morty
-# uncomment below section if you have running morty proxy
-# the key is base64 encoded (keep the !!binary notation)
-# Note: since commit af77ec3, morty accepts a base64 encoded key.
-#result_proxy:
-#    url : http://127.0.0.1:3000/
-#    key : !!binary "your_morty_proxy_key"
-
-outgoing: # communication with search engines
-    request_timeout : 2.0 # default timeout in seconds, can be override by engine
-    # max_request_timeout: 10.0 # the maximum timeout in seconds
-    useragent_suffix : "" # suffix of searx_useragent, could contain informations like an email address to the administrator
-    pool_connections : 100 # Number of different hosts
-    pool_maxsize : 10 # Number of simultaneous requests by host
-# uncomment below section if you want to use a proxy
-# see http://docs.python-requests.org/en/latest/user/advanced/#proxies
-# SOCKS proxies are also supported: see http://docs.python-requests.org/en/master/user/advanced/#socks
-#    proxies :
-#        http : http://127.0.0.1:8080
-#        https: http://127.0.0.1:8080
-# uncomment below section only if you have more than one network interface
-# which can be the source of outgoing search requests
-#    source_ips:
-#        - 1.1.1.1
-#        - 1.1.1.2
-
+        oscar_style : logicodev
+outgoing:
+    request_timeout : 2.0
+    useragent_suffix : ""
+    pool_connections : 100
+    pool_maxsize : 10
 engines:
   - name: apk mirror
     engine: apkmirror
@@ -61,6 +36,7 @@ engines:
   - name : arch linux wiki
     engine : archlinux
     shortcut : al
+    disabled: True
 
   - name : archive is
     engine : xpath
@@ -78,6 +54,7 @@ engines:
     shortcut : arx
     categories : science
     timeout : 4.0
+    disabled: True
 
   - name : base
     engine : base
@@ -119,6 +96,7 @@ engines:
   - name : btdigg
     engine : btdigg
     shortcut : bt
+    disabled: True
 
   - name : ccc-tv
     engine : xpath
@@ -140,20 +118,24 @@ engines:
     content_query : fullCitation
     categories : science
     shortcut : cr
+    disabled: True
 
   - name : currency
     engine : currency_convert
     categories : general
     shortcut : cc
+    disabled: True
 
   - name : deezer
     engine : deezer
     shortcut : dz
+    disabled: True
 
   - name : deviantart
     engine : deviantart
     shortcut : da
     timeout: 3.0
+    disabled: True
 
   - name : ddg definitions
     engine : duckduckgo_definitions
@@ -170,6 +152,7 @@ engines:
   - name : digg
     engine : digg
     shortcut : dg
+    disabled: True
 
   - name : erowid
     engine : xpath
@@ -243,8 +226,6 @@ engines:
     categories : it
     base_url : https://directory.fsf.org/
     number_of_results : 5
-# what part of a page matches the query string: title, text, nearmatch
-# title - query matches title, text - query matches the text of page, nearmatch - nearmatch in title
     search_type : title
     timeout : 5.0
     disabled : True
@@ -257,6 +238,7 @@ engines:
   - name : genius
     engine : genius
     shortcut : gen
+    disabled: True
 
   - name : gigablast
     engine : gigablast
@@ -267,6 +249,7 @@ engines:
   - name : gentoo
     engine : gentoo
     shortcut : ge
+    disabled: True
 
   - name : gitlab
     engine : json_engine
@@ -291,15 +274,15 @@ engines:
 
   - name : google images
     engine : google_images
-    shortcut : goi
+    shortcut : gi
 
   - name : google news
     engine : google_news
-    shortcut : gon
+    shortcut : gn
 
   - name : google videos
     engine : google_videos
-    shortcut : gov
+    shortcut : gv
 
   - name : google scholar
     engine : xpath
@@ -314,6 +297,7 @@ engines:
     first_page_num : 0
     categories : science
     shortcut : gos
+    disabled: True
 
   - name : google play apps
     engine : xpath
@@ -386,6 +370,7 @@ engines:
     page_size : 20
     categories : it
     shortcut : ho
+    disabled: True
 
   - name : ina
     engine : ina
@@ -398,6 +383,7 @@ engines:
     base_url : 'https://invidio.us/'
     shortcut: iv
     timeout : 5.0
+    disabled: True
 
   - name: kickass
     engine : kickass
@@ -425,15 +411,18 @@ engines:
     content_xpath : .//a[@class="domain"]
     categories : it
     shortcut : lo
+    disabled: True
 
   - name : microsoft academic
     engine : microsoft_academic
     categories : science
     shortcut : ma
+    disabled: True
 
   - name : mixcloud
     engine : mixcloud
     shortcut : mc
+    disabled: True
 
   - name : npm
     engine : json_engine
@@ -471,6 +460,7 @@ engines:
     categories : science
     shortcut : oad
     timeout: 5.0
+    disabled: True
 
   - name : openairepublications
     engine : json_engine
@@ -483,6 +473,7 @@ engines:
     categories : science
     shortcut : oap
     timeout: 5.0
+    disabled: True
 
   - name : openstreetmap
     engine : openstreetmap
@@ -503,25 +494,26 @@ engines:
   - name : pdbe
     engine : pdbe
     shortcut : pdb
-# Hide obsolete PDB entries.
-# Default is not to hide obsolete structures
-#    hide_obsolete : False
+    disabled: True
 
   - name : photon
     engine : photon
     shortcut : ph
+    disabled: True
 
   - name : piratebay
     engine : piratebay
     shortcut : tpb
     url: https://pirateproxy.red/
     timeout : 3.0
+    disabled: True
 
   - name : pubmed
     engine : pubmed
     shortcut : pub
     categories: science
     timeout : 3.0
+    disabled: True
 
   - name : qwant
     engine : qwant
@@ -538,6 +530,7 @@ engines:
     engine : qwant
     shortcut : qwn
     categories : news
+    disabled: True
 
   - name : qwant social
     engine : qwant
@@ -549,7 +542,7 @@ engines:
     shortcut : re
     page_size : 25
     timeout : 10.0
-    disabled : True
+    disabled : False
 
   - name : scanr structures
     shortcut: scs
@@ -559,6 +552,7 @@ engines:
   - name : soundcloud
     engine : soundcloud
     shortcut : sc
+    disabled: True
 
   - name : stackoverflow
     engine : stackoverflow
@@ -567,6 +561,7 @@ engines:
   - name : searchcode doc
     engine : searchcode_doc
     shortcut : scd
+    disabled: True
 
   - name : searchcode code
     engine : searchcode_code
@@ -596,10 +591,12 @@ engines:
     content_xpath : .//div[@class="search-result-abstract"]
     shortcut : se
     categories : science
+    disabled: True
 
   - name : spotify
     engine : spotify
     shortcut : stf
+    disabled: True
 
   - name : startpage
     engine : startpage
@@ -618,26 +615,11 @@ engines:
     shortcut : tor
     url: https://torrentz2.eu/
     timeout : 3.0
+    disabled: True
 
   - name : twitter
     engine : twitter
     shortcut : tw
-
-# maybe in a fun category
-#  - name : uncyclopedia
-#    engine : mediawiki
-#    shortcut : unc
-#    base_url : https://uncyclopedia.wikia.com/
-#    number_of_results : 5
-
-# tmp suspended - too slow, too many errors
-#  - name : urbandictionary
-#    engine        : xpath
-#    search_url    : http://www.urbandictionary.com/define.php?term={query}
-#    url_xpath     : //*[@class="word"]/@href
-#    title_xpath   : //*[@class="def-header"]
-#    content_xpath : //*[@class="meaning"]
-#    shortcut : ud
 
   - name : unsplash
     engine : unsplash
@@ -657,6 +639,7 @@ engines:
   - name : yahoo news
     engine : yahoo_news
     shortcut : yhn
+    disabled: True
 
   - name : youtube
     shortcut : yt
@@ -670,33 +653,31 @@ engines:
   - name : dailymotion
     engine : dailymotion
     shortcut : dm
+    disabled: True
 
   - name : vimeo
     engine : vimeo
     shortcut : vm
+    disabled: True
 
   - name : wolframalpha
     shortcut : wa
-    # You can use the engine using the official stable API, but you need an API key
-    # See : http://products.wolframalpha.com/api/
-    # engine : wolframalpha_api
-    # api_key: '' # required!
-    engine : wolframalpha_noapi
+    engine : wolframalpha_api
+    api_key: '7UQ6JV-P447E5VPGH'
+    ## engine : wolframalpha_noapi
     timeout: 6.0
     categories : science
 
   - name : dictzone
     engine : dictzone
     shortcut : dc
+    disabled: True
 
   - name : mymemory translated
     engine : translated
     shortcut : tl
     timeout : 5.0
     disabled : True
-    # You can use without an API key, but you are limited to 1000 words/day
-    # See : http://mymemory.translated.net/doc/usagelimits.php
-    # api_key : ''
 
   - name : voat
     engine: xpath
@@ -747,62 +728,13 @@ engines:
     page_size : 10
     disabled : True
 
-#  - name : yacy
-#    engine : yacy
-#    shortcut : ya
-#    base_url : 'http://localhost:8090'
-#    number_of_results : 5
-#    timeout : 3.0
-
-# Doku engine lets you access to any Doku wiki instance:
-# A public one or a privete/corporate one.
-#  - name : ubuntuwiki
-#    engine : doku
-#    shortcut : uw
-#    base_url : 'http://doc.ubuntu-fr.org'
-
 locales:
     en : English
-    ar : العَرَبِيَّة (Arabic)
-    bg : Български (Bulgarian)
-    ca : Català (Catalan)
     cs : Čeština (Czech)
-    cy : Cymraeg (Welsh)
-    da : Dansk (Danish)
-    de : Deutsch (German)
-    el_GR : Ελληνικά (Greek_Greece)
-    eo : Esperanto (Esperanto)
-    es : Español (Spanish)
-    eu : Euskara (Basque)
-    fa_IR : (fārsī) فارسى (Persian)
-    fi : Suomi (Finnish)
-    fil : Wikang Filipino (Filipino)
-    fr : Français (French)
-    gl : Galego (Galician)
-    he : עברית (Hebrew)
-    hr : Hrvatski (Croatian)
-    hu : Magyar (Hungarian)
-    ia : Interlingua (Interlingua)
-    it : Italiano (Italian)
     ja : 日本語 (Japanese)
-    nl : Nederlands (Dutch)
-    nl_BE : Vlaams (Dutch_Belgium)
-    pl : Polski (Polish)
-    pt : Português (Portuguese)
-    pt_BR : Português (Portuguese_Brazil)
-    ro : Română (Romanian)
     ru : Русский (Russian)
     sk : Slovenčina (Slovak)
-    sl : Slovenski (Slovene)
-    sr : српски (Serbian)
-    sv : Svenska (Swedish)
-    te : తెలుగు (telugu)
-    tr : Türkçe (Turkish)
-    uk : українська мова (Ukrainian)
-    vi : tiếng việt (Vietnamese)
-    zh : 中文 (Chinese)
-    zh_TW : 國語 (Taiwanese Mandarin)
-
+    
 doi_resolvers :
   oadoi.org : 'https://oadoi.org/'
   doi.org : 'https://doi.org/'
