--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -205,7 +205,7 @@ engines:
   - name : faroo
     engine : faroo
     shortcut : fa
-    disabled : False
+    disabled : True
 
   - name : 1x
     engine : www1x
